[package]
name = "binary-log"
version = "0.1.0"
edition = "2021"

[features]
default = []
sqlite = ["bincode", "rusqlite", "zstd"]

[dependencies]
refcount-interner = "0.2.4"
bincode = { version = "1.3.3", optional = true }
rusqlite = { version = "0.27.0", optional = true }
zstd = { version = "0.11.1+zstd.1.5.2", optional = true }
