[package]
name = "binlog"
version = "0.1.0"
edition = "2021"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "A binary data log library"
keywords = ["database"]
categories = ["database", "database-implementations"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[lib]
name = "binlog"
crate-type = ["cdylib", "rlib"]

[features]
default = []
sqlite = ["rusqlite", "zstd"]
python = ["pyo3", "sqlite"]

[dependencies]
string_cache = "0.8.4"
rusqlite = { version = "0.27.0", optional = true }
zstd = { version = "0.11.1+zstd.1.5.2", optional = true }
pyo3 = { version = "0.16.1", features = ["extension-module"], optional = true }
