[package]
name = "binlog"
version = "0.2.0"
edition = "2021"
authors = ["Yusuf Simonson <simonson@gmail.com>"]
description = "A binary data log library"
keywords = ["database"]
categories = ["database", "database-implementations"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[lib]
name = "binlog"
crate-type = ["cdylib", "rlib"]

[features]
default = []
redis-store = ["redis", "byteorder"]
sqlite-store = ["rusqlite", "zstd", "r2d2", "r2d2_sqlite", "tempfile"]
python = ["pyo3", "redis-store", "sqlite-store"]
benches = []

[dependencies]
crossbeam-channel = "0.5.4"
string_cache = "0.8.4"

# python dependencies
pyo3 = { version = "0.16.1", features = ["extension-module"], optional = true }

# sqlite dependencies
rusqlite = { version = "0.27.0", optional = true }
r2d2 = { version = "0.8.9", optional = true }
r2d2_sqlite = { version = "0.20.0", optional = true }
tempfile = { version = "^3.3.0", optional = true }
zstd = { version = "0.11.1", optional = true }

# redis dependencies
byteorder = { version = "^1.4.3", optional = true }
redis = { version = "0.21.5", features = ["streams"], optional = true }